manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triggerrallye
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: triggerrallye
  template:
    metadata:
      labels:
        app: triggerrallye
    spec:
      containers:
      - image: milou666/triggerrally
        name: triggerrallye
        ports:
        - containerPort: 80
