manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trigger
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
